--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -165,6 +165,7 @@
     <Content Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Views\Home\RsvpForm.cshtml" />
     <Content Include="Content\Style.css" />
+    <Content Include="Views\Home\Thanks.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Scripts\jquery-3.1.1.slim.min.map" />
